--- a/MVP/mvp_fragment/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/MVP/mvp_fragment/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -11,7 +11,7 @@
         android:id="@+id/item_home"
         android:enabled="true"
         android:icon="@drawable/ic_home"
-        android:title="Main"/>
+        android:title="Home"/>
 
     <item
         android:id="@+id/item_favorite"
