--- a/MVP/mvp_fragment/app/src/main/res/layout/fragment_note.xml
+++ b/MVP/mvp_fragment/app/src/main/res/layout/fragment_note.xml
@@ -4,11 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/title_note"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Note Fragment"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_note_list"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
