--- a/MVP/mvp_fragment/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/MVP/mvp_fragment/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -4,19 +4,19 @@
     <item
         android:id="@+id/item_note"
         android:enabled="true"
-        android:icon="@drawable/ic_note"
-        android:title="Note"/>
+        android:icon="@drawable/main_noteicon"
+        android:title="Note" />
 
     <item
         android:id="@+id/item_home"
         android:enabled="true"
-        android:icon="@drawable/ic_home"
-        android:title="Home"/>
+        android:icon="@drawable/main_homeicon"
+        android:title="Home" />
 
     <item
         android:id="@+id/item_favorite"
         android:enabled="true"
-        android:icon="@drawable/ic_favorite"
-        android:title="Favorite"/>
+        android:icon="@drawable/main_favoriteicon"
+        android:title="Favorite" />
 
 </menu>
