--- a/MVP/mvp_fragment/app/src/main/res/layout/item_note.xml
+++ b/MVP/mvp_fragment/app/src/main/res/layout/item_note.xml
@@ -5,13 +5,25 @@
     android:layout_height="50dp">
 
     <TextView
-        android:id="@+id/textview_note_item"
-        android:layout_width="wrap_content"
+        android:id="@+id/textview_note_title"
+        android:layout_width="100dp"
         android:layout_height="0dp"
         android:layout_marginStart="15dp"
         android:gravity="center|start"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textview_note_detail"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="30dp"
+        android:gravity="center|start"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/textview_note_title"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
