AddNote 화면 추가, 툴바 변경
- 기존 ActionBar 에서 MaterialToolbar 로 변경
- MaterialToolbar 로 변경하며 기존 Fragment 레이아웃에 MaterialToolbar 추가
- NoteFragment 의 FloatingActionButtton 에 화면 전환 이벤트 추가
- NoteFragment 의 changeFragment 메소드에 backStack을 추가함으로써 AddNoteFragment 에 changeFragment 가 아닌 popBackFragment 사용
- AddNote 화면 구성을 위한 Contract, Presenter, Fragment 추가
- AddNote navgiation 버튼에 뒤로가기 이벤트 추가

--- a/MVP/mvp_fragment/app/src/main/res/layout/fragment_favorite.xml
+++ b/MVP/mvp_fragment/app/src/main/res/layout/fragment_favorite.xml
@@ -4,6 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar_favorite"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar_favorite"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/Toolbar"
+            app:title="FavoriteFragment" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <TextView
         android:id="@+id/title_favorite"
         android:layout_width="wrap_content"
