노트 삭제하는 기능 추가
- 툴바 메뉴를 한 타입 더 만들어 수정/삭제에 따라 툴바 메뉴를 맞추어 설정
- 메뉴 아이템이 1개가 아닌 여러개로 늘어남에 따라 AddNoteFragment 의 툴바 이벤트를 수정
- 삭제 이벤트가 추가됨에 따라 deleteNote 메소드 추가
- 임시로 만들어놨던 fragment_editnote xml 삭제

--- a/MVP/mvp_fragment/app/src/main/res/menu/menu_editnote_toolbar.xml
+++ b/MVP/mvp_fragment/app/src/main/res/menu/menu_editnote_toolbar.xml
@@ -3,8 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/item_addnote_confirm"
+        android:id="@+id/item_editnote_delete"
+        android:title="Delete"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/item_editnote_confirm"
         android:icon="@drawable/addnote_check_24dp"
         android:title="Add"
         app:showAsAction="always" />
+
 </menu>
