--- a/MVP/mvp_fragment/app/src/main/res/layout/item_note.xml
+++ b/MVP/mvp_fragment/app/src/main/res/layout/item_note.xml
@@ -26,4 +26,15 @@
         app:layout_constraintStart_toEndOf="@id/textview_note_title"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/imageView_note_favorite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="30dp"
+        android:background="@drawable/note_favorite_selector"
+        android:src="@drawable/note_favorite_24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
