--- a/MVP/mvp_fragment/app/src/main/res/layout/fragment_favorite.xml
+++ b/MVP/mvp_fragment/app/src/main/res/layout/fragment_favorite.xml
@@ -20,14 +20,13 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <TextView
-        android:id="@+id/title_favorite"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Favorite Fragment"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_favorite_list"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/appbar_favorite" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
