달력에 노트 표시하는 기능 추가, 즐겨찾기 아이콘 변경
- CalendarFragmentContract, CalendarFragmentPresenter 이름을 CalendarContract, CalendarPresenter 로 변경
- 날짜로 노트들을 불러오는 getNotes() 메소드를 추가
- Dao 를 통해서 받아오는 List<NoteItem>? 이 null 값을 반환하는 것이 아닌 사이즈가 0인 List 를 반환하기에 null 확인이 아닌 isEmpty() 로 확인
- 즐겨찾기 아이콘을 체크로 변경, Selector 를 통해 표시할 수 있도록 하였음
- 달력에 표시되는 노트 아이콘은 동적으로 추가되고 즐겨찾기는 색상으로 표시
- 달력에 사용되는 색상코드 colors 에 추가

--- a/MVP/mvp_fragment/app/src/main/res/values/colors.xml
+++ b/MVP/mvp_fragment/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="light_gray">#FFCCCCCC</color>
     <color name="red">#FFFF5555</color>
+
+    <color name="calendar_note_activate">#FFFF5555</color>
+    <color name="calendar_note_inactivated">#FFAAAAAA</color>
 </resources>
