--- a/MVP/mvp_fragment/app/src/main/res/layout/item_calendar_date.xml
+++ b/MVP/mvp_fragment/app/src/main/res/layout/item_calendar_date.xml
@@ -6,12 +6,25 @@
 
     <TextView
         android:id="@+id/textview_calendar_date"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@id/linearlayout_calendar_date_note"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/linearlayout_calendar_date_note"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textview_calendar_date" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
