--- a/MVP/mvp_fragment/app/src/main/res/layout/item_note.xml
+++ b/MVP/mvp_fragment/app/src/main/res/layout/item_note.xml
@@ -28,11 +28,11 @@
 
     <ImageView
         android:id="@+id/imageView_note_favorite"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="30dp"
-        android:background="@drawable/note_favorite_selector"
-        android:src="@drawable/note_favorite_24dp"
+        android:background="@drawable/note_favorite_border"
+        android:src="@drawable/note_favorite_selector"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
