--- a/codelab/codelab-android-navigation-master/app/src/main/res/navigation/mobile_navigation.xml
+++ b/codelab/codelab-android-navigation-master/app/src/main/res/navigation/mobile_navigation.xml
@@ -20,31 +20,28 @@
         android:name="com.example.android.codelabs.navigation.HomeFragment"
         android:label="@string/home"
         tools:layout="@layout/home_fragment">
-
-        <!-- TODO STEP 7.1 - Add action with transitions -->
-        <!--<action-->
-            <!--android:id="@+id/next_action"-->
-            <!--app:destination="@+id/flow_step_one_dest"-->
-            <!--app:enterAnim="@anim/slide_in_right"-->
-            <!--app:exitAnim="@anim/slide_out_left"-->
-            <!--app:popEnterAnim="@anim/slide_in_left"-->
-            <!--app:popExitAnim="@anim/slide_out_right" />-->
-        <!-- TODO END STEP 7.1 -->
-
+        <action
+            android:id="@+id/next_action"
+            app:destination="@id/flow_step_one_dest"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
 
     <fragment
         android:id="@+id/flow_step_one_dest"
         android:name="com.example.android.codelabs.navigation.FlowStepFragment"
         tools:layout="@layout/flow_step_one_fragment">
+
         <argument
             android:name="flowStepNumber"
             app:argType="integer"
             android:defaultValue="1"/>
-
         <action
             android:id="@+id/next_action"
             app:destination="@+id/flow_step_two_dest">
+
         </action>
     </fragment>
 
@@ -64,14 +61,6 @@
         </action>
     </fragment>
 
-    <!-- TODO STEP 4 Create a new navigation destination pointing to SettingsFragment -->
-    <!--<fragment-->
-        <!--android:id="@+id/settings_dest"-->
-        <!--android:name="com.example.android.codelabs.navigation.SettingsFragment"-->
-        <!--android:label="@string/settings"-->
-        <!--tools:layout="@layout/settings_fragment" />-->
-    <!-- TODO END STEP 4 -->
-
     <fragment
         android:id="@+id/deeplink_dest"
         android:name="com.example.android.codelabs.navigation.DeepLinkFragment"
@@ -81,10 +70,19 @@
         <argument
             android:name="myarg"
             android:defaultValue="Android!"/>
-        <!-- TODO STEP 11.1 - Add a deep link to www.example.com/{myarg}/ -->
+        <deepLink
+            app:uri="www.example.com/{myarg}" />
 
-        <!--<deepLink app:uri="www.example.com/{myarg}" />-->
-
-        <!-- TODO END STEP 11.1 -->
     </fragment>
+    <fragment
+        android:id="@+id/settings_dest"
+        android:name="com.example.android.codelabs.navigation.SettingsFragment"
+        android:label="settings_fragment"
+        tools:layout="@layout/settings_fragment" />
+
+    <fragment
+        android:id="@+id/cart_dest"
+        android:name="com.example.android.codelabs.navigation.ShoppingFragment"
+        android:label="cart_fragment"
+        tools:layout="@layout/shopping_fragment" />
 </navigation>
